fix vertical alignment using a gigantic margin

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,9 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.log {
+  list-style: none;
+  padding-top: 12px;
+  margin-bottom: auto;
+}
